# paramak

./: .gitignore  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
dev/: output.json
dev/.doctrees/: environment.pickle  examples_spherical_tokamak.doctree  examples_tokamak.doctree  index.doctree  python_api.doctree
examples/: spherical_tokamak_from_plasma_animation.py  spherical_tokamak_from_plasma_minimal.py  spherical_tokamak_from_plasma_with_color.py  spherical_tokamak_from_plasma_with_divertor.py  spherical_tokamak_from_plasma_with_pf_magnets.py  spherical_tokamak_from_plasma_with_pf_magnets_and_divertors.py  spherical_tokamak_from_plasma_with_tf_magnets.py  spherical_tokamak_minimal.py  tokamak_from_plasma_animation.py  tokamak_from_plasma_minimal.py  tokamak_from_plasma_with_color.py  tokamak_from_plasma_with_divertor.py  tokamak_minimal.py  tokamak_with_pf_magnets.py  tokamak_with_pf_tf_magnets_divertor.py
src/paramak/assemblies/: assembly.py  spherical_tokamak.py  tokamak.py
src/paramak/workplanes/: blanket_from_plasma.py  plasma_simplified.py
