[build-system]
requires = ["setuptools>=72.1.0", "setuptools_scm[toml]>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paramak"
dynamic = ["version"]
description = "Create 3D fusion reactor CAD models based on input parameters"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="The Paramak Development Team" },
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.9, <3.12"
keywords = ["python", "geometry", "reactor", "model", "cad", "fusion", "parametric", "dagmc"]
dependencies = [
    "cadquery>=2.5.2",
    "numpy",
    "mpmath",
    "sympy",
    "scipy",
    "cadquery_png_plugin"
]

[project.optional-dependencies]
tests = [
    "pytest>=5.4.3",
    "pytest-cov>=2.12.1",
    "dagmc_h5m_file_inspector>=0.5.0",
    "openmc_data_downloader",
    "paramak"
]
docs = [
    "sphinx_autodoc_typehints",
    "openmc_data_downloader",
    "sphinxcadquery",
    "sphinx",
    "pydata-sphinx-theme",
    "cadquery",
    "ipython",
    "sphinx_design",
    "setuptools",
]

[project.urls]
"Homepage" = "https://github.com/fusion-energy/paramak"
"Bug Tracker" = "https://github.com/fusion-energy/paramak/issues"
"Documentation" = "https://fusion-energy.github.io/paramak"

[[tool.uv.index]]
url = "https://pypi.org/simple"

[tool.black]
line-length = 120

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv.workspace]
members = [
    ".",
    ".",
    ".",
    ".",
]

[tool.uv.sources]
paramak = { workspace = true }

[dependency-groups]
dev = [
    "paramak",
]
